<resources>
    <string name="app_name">TutorU</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="let_s_tutoru">Let\'s TutorU!</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="tutoru">TutorU</string>
    <string name="log_in">Log in</string>
    <string name="logo">Logo</string>
    <string name="tutee">Tutee</string>
    <string name="tutor">Tutor</string>
    <string name="please_select_your_user_type">Please Select Your User Type</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_account">Register Account</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="please_enter_your_information">Please Enter Your Information</string>
    <string name="select_subject_s">Select Subject(s)</string>
    <string name="select_course_s">Select Course(s)</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_account">Create Account</string>
    <string name="select_subjects_courses">Select Subjects / Courses</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_new_subject_courses">Add New Subject / Courses</string>
    <string name="availible_to_tutor">Available to Tutor:</string>
    <string name="name">Name</string>
    <string name="sharedPrefs">com.newwesterndev.TutorU.prefs</string>
    <string name="type_your_question_here">Type your question here...</string>
    <string name="what_issue_string">What issue are you having?</string>
    <string name="view_my_courses_subjects">View My Subjects/Courses</string>
    <string name="tuteeMain">tutee</string>
    <string name="tutorMain">tutor</string>
    <string name="unknown">unknown</string>
    <string name="title_activity_tutor_view_subjects_courses">TutorViewSubjectsCoursesActivity
    </string>
    <string name="action_settings">Settings</string>
    <string name="FCM_ID">FCM_ID</string>
    <string name="your_courses">Your Courses</string>
    <string name="hello_username">Hello, Username!</string>
    <string name="choose_a_subject">Choose a subject</string>
    <string name="let_s_find_you_a_tutor">Let\'s Find You A Tutor</string>
    <string name="choose_a_course">Choose a course</string>
    <string name="tell_us_your_problem">Tell us your problem:</string>
    <string name="help_me">Help Me!</string>
</resources>
