<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#00ADEF"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:text="@string/registration"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/text_view_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/please_select_your_user_type"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/button_tutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tutor"
            android:background="#00ADEF"
            android:textColor="@android:color/white"
            />

        <Button
            android:id="@+id/button_tutee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tutee"
            android:textColor="@android:color/white"
            android:background="#00ADEF" />

    </LinearLayout>

</LinearLayout>